# tcc-backend

./: Makefile  docker-compose.yml  poetry.toml  pyproject.toml
src/: main.py
src/app/: __init__.py  utils.py
src/app/controllers/: tcc_controller.py  user_controller.py
src/app/models/: comment_model.py  tcc_model.py  user_model.py
src/app/schemas/: tcc_schema.py
